<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_pkg</name>
  <version>0.0.1</version>
  <description>Traffic-light and lane camera publishers.</description>
  <maintainer email="user@example.com">thislifewon</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>python3-opencv</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
